--- a/style.css
+++ b/style.css
@@ -1,8 +1,34 @@
 body {
-  font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
-  font-size: 12px;
+  font-family: Open Sans, sans-serif;
+  font-size: 14px;
   min-width: 300px;
+  background-color: #FFDEDB;
 }
+
+#pkmnName {
+  border: 2px solid white;
+  outline: none;
+}
+
+#submitButton {
+  border: 2px solid white;
+  background: white;
+}
+
+#image-result {
+    background-color: rgba(255, 255, 255, 0.6);
+}
+
+div.ability {
+    background-color: rgba(255, 255, 255, 0.6);
+}
+#ability {
+}
+
+div.text {
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
 #status {
   /* avoid an excessively wide status text */
   white-space: pre;
