--- a/style.css
+++ b/style.css
@@ -55,6 +55,14 @@ body {
   font-size: 15px;
 }
 
+#spinner {
+  position: absolute;
+  left: 60px;
+  top: 60px;
+  width: 75px;
+  height: auto;
+}
+
 #type1 {
   position: absolute;
   left: 240px;
